--- a/themes/dude/theme.css
+++ b/themes/dude/theme.css
@@ -228,15 +228,15 @@ html /deep/ #svg .group .title, html /deep/ #svg .block .title {
     font-size: .9em;
     stroke: transparent;
 }
-html /deep/ #svg .group .background, html /deep/ #svg .block .background {
-    opacity: 0.9;
+html /deep/ #svg .block .background {
+    opacity: 0.7;
     transition: .2s;
 }
 html /deep/ #svg .block:hover .background {
     stroke-width: 5px;
 }
 html /deep/ #svg .block.selected .background {
-    opacity: 1;
+    opacity: 0.9;
     stroke-width: 5px;
 }
 
