--- a/themes/dude.css
+++ b/themes/dude.css
@@ -1,5 +1,5 @@
 #cg-svg {
-    background: #2C2C2C;
+    background: #333333;
     width: 100%;
     height: 100%;
 }
@@ -7,9 +7,17 @@
     font-family: sans-serif;
     fill: hsla(0, 0%, 80%, 1);
 }
+
 .cg-group > rect {
     fill: hsla(0, 0%, 80%, 0.2);
 }
+.cg-group.selected > rect {
+    fill: hsla(0, 0%, 90%, 0.2);
+}
+
 .cg-block > rect {
+    fill: hsla(0, 0%, 15%, .8);
+}
+.cg-block.selected > rect {
     fill: hsla(0, 0%, 10%, .8);
 }
